--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ main h3{
 
 
 .presentation{
-  background-image: url('../images/Abous us 1.jpg');
+  background-image: url('../images/about-us-1.jpg');
   line-height: 0;
   opacity: 0.8;
   margin: 0;
